cabal-version:      3.0
name:               transom
version:            0.1.0.0
synopsis:           NURBS Library
description:        A library for NURBS.
bug-reports:        https://github.com/lancelet/transom/issues
license:            BSD-3-Clause
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com
copyright:          Copyright (C) Jonathan Merritt, 2021
category:           Graphics
extra-source-files: CHANGELOG.md

common base
  default-language: Haskell2010
  build-depends:    base ^>=4.14.0.0

common ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

executable transom
  import:         base, ghc-options
  main-is:        Main.hs
  hs-source-dirs: app
